added: get tasks for each users per day

--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -4,6 +4,7 @@
            class="form-control"
            bsDatepicker
            [bsConfig]="{ adaptivePosition: true,
-                         dateInputFormat: 'DD/MM/YYYY' }"
+                         dateInputFormat: 'DD/MM/YYYY',
+                         selectWeek: true }"
            [bsValue]="bsValue">
   </div>
