--- a/src/app/info-board/info-board.component.html
+++ b/src/app/info-board/info-board.component.html
@@ -2,11 +2,14 @@
     <thead>
         <tr>
             <th class="text-center">Users</th>
-            <th class="text-center">Task1</th>
-            <th class="text-center">Task2</th>
-            <th class="text-center">Task3</th>
-            <th class="text-center">Task4</th>
-            <th class="text-center">Task5</th>
+            <th class="text-center">Total</th>
+            <th class="text-center">Day1</th>
+            <th class="text-center">Day2</th>
+            <th class="text-center">Day3</th>
+            <th class="text-center">Day4</th>
+            <th class="text-center">Day5</th>
+            <th class="text-center">Day6</th>
+            <th class="text-center">Day7</th>
         </tr>
     </thead>
     <tbody>
@@ -15,3 +18,6 @@
         </tr>
     </tbody>
 </table>
+<button (click)="printUser()">print user</button>
+<button (click)="printTasks()">print tasks</button>
+<button (click)="filterTasks()">filter tasks</button>
