--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -4,7 +4,9 @@
            class="form-control"
            bsDatepicker
            [bsConfig]="{ adaptivePosition: true,
-                         dateInputFormat: 'DD/MM/YYYY',
-                         selectWeek: true }"
-           [bsValue]="bsValue">
+                         dateInputFormat: 'MMMM',
+                         selectWeek: true,
+                         selectFromOtherMonth: true }"
+           [bsValue]="bsValue"
+           (bsValueChange)="onDateChange($event)">
   </div>
