--- a/src/app/info-board/info-board.component.html
+++ b/src/app/info-board/info-board.component.html
@@ -1,19 +1,20 @@
-<table class="table">
+<table class="table table-bordered table-striped">
     <thead>
         <tr>
-            <th class="text-center">Users</th>
-            <th class="text-center">Total</th>
-            <th class="text-center" *ngFor="let day of dateService.week.value">{{day | date}}</th>
+            <th class="text-center" style="width: 16.66%">Users</th>
+            <th class="text-center" style="width: 10%" *ngFor="let day of dateService.week.value">{{day | date}}</th>
+            <th class="text-center" style="width: 10%">Total</th>
         </tr>
     </thead>
     <tbody>
         <tr *ngFor="let user of users">
             <td class="text-center">{{user.userName}}</td>
-            <td class="text-center">{{user.hours}}</td>
+            <td class="text-center" *ngFor="let hoursPerDay of user.hoursPerDays">
+                {{hoursPerDay}}
+            </td>
+            <td class="text-center font-weight-bold">{{user.totalHours}}</td>
         </tr>
     </tbody>
 </table>
-<button (click)="printUser()">print user</button>
+
 <button (click)="printTasks()">print tasks</button>
-<button (click)="filterTasks()">filter tasks</button>
-<button (click)="fillTable()">fillTable</button>
