--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,2 @@
-<app-calendar class="row"></app-calendar>
+<app-calendar class="row align-items-center"></app-calendar>
 <app-info-board class="row"></app-info-board>
