--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -1,14 +1,16 @@
-<div class="col-4 mx-auto d-flex align-items-center mb-4 mt-3">
-    <i class="material-icons m-1">arrow_left</i>
+<div class="col-12 col-md-6 col-lg-3 d-flex align-items-center mb-4 mt-3">
+    <i class="material-icons m-1" (click)="onWeekChange(-7)">arrow_left</i>
 
     <input type="text" placeholder="Datepicker" class="form-control m-1" bsDatepicker 
     [bsConfig]="{ adaptivePosition: true,
-                         dateInputFormat: 'MMMM',
+                         dateInputFormat: 'ddd DD',
                          selectWeek: true,
                          selectFromOtherMonth: true }" 
                          #dp="bsDatepicker" 
                          [bsValue]="bsValue" (bsValueChange)="onDateChange($event)">
 
-    <i class="material-icons m-1">arrow_right</i>
+    <span class="w-50 text-center"> to: {{dateService.week.value[6] | date}}</span>
+    <i class="material-icons m-1" (click)="onWeekChange(7)">arrow_right</i>
     <i class="material-icons m-1" (click)="dp.toggle()">calendar_today</i>
 </div>
+<app-auto-update></app-auto-update>
