changed: total column style

--- a/src/app/info-board/info-board.component.html
+++ b/src/app/info-board/info-board.component.html
@@ -39,8 +39,7 @@
             </tr>
         </thead>
         <tbody>
-            <tr *ngFor="let user of users | sort : 'userName' : namesSortOrder"
-                [class.d-none]="isHidden(user.userId)">
+            <tr *ngFor="let user of users | sort : 'userName' : namesSortOrder" [class.d-none]="isHidden(user.userId)">
                 <td class="d-flex justify-content-between">
                     <span class="flex-fill">
                         {{user.userName}}
@@ -51,9 +50,9 @@
                         visibility
                     </i>
                 </td>
-                <td class="text-center" *ngFor="let hoursPerDay of user.hoursPerDays" 
-                [class.bold-hours-to-capacity]='getDayCapacityLevel(user.capacity, hoursPerDay) &gt; 100 || getDayCapacityLevel(user.capacity, hoursPerDay) &lt;= 0'
-                [ngClass]="{
+                <td class="text-center" *ngFor="let hoursPerDay of user.hoursPerDays"
+                    [class.bold-hours-to-capacity]='getDayCapacityLevel(user.capacity, hoursPerDay) &gt; 100 || getDayCapacityLevel(user.capacity, hoursPerDay) &lt;= 0'
+                    [ngClass]="{
                     'hours-to-capacity-0': getDayCapacityLevel(user.capacity, hoursPerDay) &lt;= 10,
                     'hours-to-capacity-1': getDayCapacityLevel(user.capacity, hoursPerDay) &lt;= 25 
                         &amp;&amp; getDayCapacityLevel(user.capacity, hoursPerDay) &gt; 10,
@@ -71,12 +70,11 @@
                         &amp;&amp; getWeekCapacityLevel(user.capacity, user.totalHours) &gt; 10,
                     'hours-to-capacity-2': getWeekCapacityLevel(user.capacity, user.totalHours) &lt;= 50 
                         &amp;&amp; getWeekCapacityLevel(user.capacity, user.totalHours) &gt; 25,
-                    'hours-to-capacity-3': getWeekCapacityLevel(user.capacity, user.totalHours) &lt;= 75 
+                    'hours-to-capacity-3': getWeekCapacityLevel(user.capacity, user.totalHours) &lt; 100 
                         &amp;&amp; getWeekCapacityLevel(user.capacity, user.totalHours) &gt; 50,
-                    'hours-to-capacity-4': (getWeekCapacityLevel(user.capacity, user.totalHours) &lt;= 100 || getWeekCapacityLevel(user.capacity, user.totalHours) &gt;= 100) 
-                        &amp;&amp; getWeekCapacityLevel(user.capacity, user.totalHours) &gt; 75
+                    'hours-to-capacity-4': getWeekCapacityLevel(user.capacity, user.totalHours) &gt;= 100
                   }">
-                  {{user.totalHours?.toFixed(1)}}</td>
+                    {{user.totalHours?.toFixed(1)}}</td>
             </tr>
         </tbody>
     </table>
