--- a/src/app/info-board/info-board.component.html
+++ b/src/app/info-board/info-board.component.html
@@ -30,7 +30,8 @@
                 <th class="text-center" style="width: 10%" *ngFor="let day of dateService.week.value">
                     <span class="d-flex align-items-center">
                         {{day | date}}
-                        <i class="material-icons sort-icon text-right">
+                        <i class="material-icons sort-icon text-right"
+                        (click)="changehoursPerDaySortOrder($event, day.getDay() - 1)">
                             keyboard_arrow_down
                         </i>
                     </span>
@@ -39,7 +40,7 @@
             </tr>
         </thead>
         <tbody>
-            <tr *ngFor="let user of users | sort : 'userName' : namesSortOrder | daySort : 0 : sortMethods.NONE" [class.d-none]="isHidden(user.userId)">
+            <tr *ngFor="let user of users | sort : 'userName' : namesSortOrder | daySort : sortDay : hoursPerDaySortOrder" [class.d-none]="isHidden(user.userId)">
                 <td class="d-flex justify-content-between">
                     <span class="flex-fill">
                         {{user.userName}}
