done: select format

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,3 @@
 <app-calendar class="row align-items-center"></app-calendar>
+<app-format-selector></app-format-selector>
 <app-info-board class="row"></app-info-board>
