--- a/src/app/info-board/info-board.component.html
+++ b/src/app/info-board/info-board.component.html
@@ -47,7 +47,7 @@
             </tr>
         </thead>
         <tbody>
-            <tr *ngFor="let user of users | sort : 'userName' : namesSortOrder | daySort : sortDay : hoursPerDaySortOrder : hoursPerWeekSortOrder" [class.d-none]="isHidden(user.userId)">
+            <tr *ngFor="let user of users | sort : 'userName' : namesSortOrder | daySort : sortDay : viewSettings.dayDataFormat.value : hoursPerDaySortOrder : hoursPerWeekSortOrder" [class.d-none]="isHidden(user.userId)">
                 <td class="d-flex justify-content-between">
                     <span class="flex-fill">
                         {{user.userName}}
